--- a/scss/elements/_gameH.scss
+++ b/scss/elements/_gameH.scss
@@ -11,11 +11,21 @@
         transition: 0.15s;
         cursor: pointer;
         overflow: hidden;
-        & img {
+        &__glass {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 5;
+            border-radius: inherit;
+            @include base.style-glass_game;
+        }
+        & > img {
             position: relative;
             z-index: 2;
             border-radius: 10px;
-            width: 100%;
+            height: 100%;
             transition: 0.15s;
         }
         &__videoBlock {
@@ -30,7 +40,8 @@
             right: 0;
             opacity: 0;
             // background-color: rgb(0, 0, 0);
-            background: linear-gradient(to bottom, base.$clr-main_body, rgb(0, 0, 0), rgb(0, 0, 0), base.$clr-main_body);
+            // background: linear-gradient(to bottom, base.$clr-main_body, rgb(0, 0, 0), rgb(0, 0, 0), base.$clr-main_body);
+            background-color: rgba(0, 0, 0, .2);
             transition: 0.15s;
             & video {
                 width: 100%;
@@ -89,12 +100,47 @@
             opacity: 0;
             transition: 0.15s;
             background: linear-gradient(to right, rgba(39, 39, 39, 0.2), rgba(39, 39, 39, 1), rgba(39, 39, 39, 1));
+            // &__button {
+            //     position: relative;
+            //     height: 35px;
+            //     width: 35px;
+            //     margin-left: 5px;
+            //     background: linear-gradient(to bottom, rgba(89, 89, 89, 1), rgba(64, 64, 64, 1));
+            //     border-radius: 7px;
+            //     display: flex;
+            //     align-items: center;
+            //     justify-content: center;
+            //     cursor: pointer;
+            //     overflow: hidden;
+            //     transition: 0.15s;
+            //     & img {
+            //         height: 18px;
+            //         filter: invert(1);
+            //     }
+            //     &__forHover {
+            //         opacity: 0;
+            //         transition: 0.15s;
+            //         &_blue {
+            //             background: base.$clr-grad_blue_100;
+            //         }
+            //         &_red {
+            //             background: base.$clr-grad_red;
+            //         }
+            //     }
+            //     &:hover &__forHover{
+            //         opacity: 1;
+            //     }
+            //     &:active {
+            //         transform: scale(0.90);
+            //     }
+            // }
             &__button {
                 position: relative;
                 height: 35px;
                 width: 35px;
                 margin-left: 5px;
-                background: linear-gradient(to bottom, rgba(89, 89, 89, 1), rgba(64, 64, 64, 1));
+                // background: linear-gradient(to bottom, rgba(89, 89, 89, 1), rgba(64, 64, 64, 1));
+                background-color: rgba(255, 255, 255, .05);
                 border-radius: 7px;
                 display: flex;
                 align-items: center;
@@ -106,19 +152,21 @@
                     height: 18px;
                     filter: invert(1);
                 }
-                &__forHover {
-                    opacity: 0;
-                    transition: 0.15s;
-                    &_blue {
-                        background: base.$clr-grad_blue_100;
-                    }
-                    &_red {
-                        background: base.$clr-grad_red;
-                    }
-                }
-                &:hover &__forHover{
-                    opacity: 1;
-                }
+                // &__forHover {
+                //     opacity: 0;
+                //     transition: 0.15s;
+                //     &_blue {
+                //         background: base.$clr-grad_blue_100;
+                //     }
+                //     &_red {
+                //         // background: linear-gradient(to bottom, rgba(255, 73, 73, 1), rgba(167, 0, 0, 1));
+                //         background: base.$clr-grad_red;
+                //     }
+                // }
+                // &:hover &__forHover{
+                //     opacity: 1;
+                // }
+                @include base.style-glass_hover;
                 &:active {
                     transform: scale(0.90);
                 }
