--- a/scss/elements/_gameV.scss
+++ b/scss/elements/_gameV.scss
@@ -8,14 +8,26 @@
         object-fit: cover;
         height: 100%;
         position: relative;
-        border-radius: 10px;
+        border-radius: 15px;
         overflow: hidden;
         background-size: cover;
         background-color: rgb(55, 55, 55);
         transition: 0.15s;
         cursor: pointer;
         & img {
+            position: relative;
+            z-index: 1;
             width: 100%;
+        }
+        &__glass {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 3;
+            border-radius: inherit;
+            @include base.style-glass;
         }
         &__discount {
             position: absolute;
@@ -25,6 +37,7 @@
             border-radius: 0 14px 0 14px;
             background-color: base.$clr-main_body;
             cursor: pointer;
+            z-index: 2;
             &__inner {
                 padding: 5px 10px 5px 10px;
                 border-radius: 0 10px 0 10px;
@@ -72,6 +85,7 @@
                 width: 35px;
                 margin-left: 5px;
                 // background: linear-gradient(to bottom, rgba(89, 89, 89, 1), rgba(64, 64, 64, 1));
+                background-color: rgba(255, 255, 255, .05);
                 border-radius: 7px;
                 display: flex;
                 align-items: center;
@@ -97,7 +111,7 @@
                 // &:hover &__forHover{
                 //     opacity: 1;
                 // }
-                @include base.style-glass_square_hover;
+                @include base.style-glass_hover;
                 &:active {
                     transform: scale(0.90);
                 }
