--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ label {
 }
 .header__searchBlock > input:focus {
   background-color: rgba(255, 255, 255, 0.2);
-  border: 1px solid rgb(1, 162, 255);
+  box-shadow: inset 0px -10px 20px -10px rgba(1, 162, 255, 0.7), 0 5px 10px -2px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgb(1, 162, 255);
 }
 .header__searchBlock__button {
   padding: 12px;
@@ -207,7 +207,6 @@ label {
   transition: 0.15s;
   transform: translateX(-100%);
   box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(255, 255, 255, 0.2), inset -1px 0 0 1px rgba(255, 255, 255, 0.2);
-  border-color: transparent;
 }
 .header__searchBlock__button:hover {
   box-shadow: inset 0px -10px 20px -10px rgba(1, 162, 255, 0.7), 0 5px 10px -2px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgb(1, 162, 255);
@@ -285,7 +284,6 @@ label {
   backdrop-filter: blur(10px);
   transition: 0.15s;
   box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
   opacity: 1;
   transform: translateY(0px);
   box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(255, 255, 255, 0.2), inset -1px 0 0 1px rgba(255, 255, 255, 0.2);
