--- a/scss/elements/_salesHits.scss
+++ b/scss/elements/_salesHits.scss
@@ -31,18 +31,22 @@
         justify-content: space-between;
     }
     &__blockButtonMore {
-        position: relative;
-        z-index: 2;
         display: flex;
         justify-content: end;
-        margin-top: 20px;
+        margin-top: 30px;
         &__button {
             display: flex;
             align-items: center;
             font-family: base.$fnt-all;
-            font-size: 18px;
-            font-weight: 500;
+            font-size: 16px;
+            font-weight: 400;
             cursor: pointer;
+
+            padding: 12px 16px 12px 16px;
+            border-radius: 21px;
+            background-color: rgba(255, 255, 255, .05);
+            @include base.style-glass_hover;
+            transition: .2s;
             & img {
                 margin-left: 5px;
                 height: 16px;
@@ -54,6 +58,9 @@
             &:hover img{
                 opacity: 1;
                 transform: translateY(1px) translateX(5px);
+            }
+            &:active {
+                transform: scale(.95);
             }
         }
     }
